--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@
 	</span>
 	<span>
       (
-	<span style="color: #a6a61f">"<a id="time"></a>"</span>);
+	<span style="color: #a6a61f">"<a id="time"></a>"</span> );
 	</span>
 	<span style="display:block">}</span>
         <span style="color: #777;font-style:italic;">
         /*<br />
         <a style="color:green; text-decoration:none;" href="https://www.bitmoe.com">Go to Bitmoe Homepage</a><br />
-        <a style="color:green; text-decoration:none;" href="https://static.bitmoe.com/mirrors.html">Go to Bitmoe Mirrors Lists</a><br />
+        <a style="color:green; text-decoration:none;" href="https://static.bitmoe.com/mirrors.html">Go to Bitmoe Mirrorlist</a><br />
         */
     </span><br>
     <span>
